--- a/core/view/base.tmpl
+++ b/core/view/base.tmpl
@@ -12,6 +12,11 @@
 		{$navigation}
 	</div>
 </div>
+
+<div id="notifications">
+	<div class="notes" id="notes"></div>
+</div>
+
 <div id="box">
 	<div id="contentBox">
 		<div id="main">
