--- a/core/assets/css/content.css
+++ b/core/assets/css/content.css
@@ -65,6 +65,12 @@ h1 {
 	text-align:left;
 }
 
+.headerLine label {
+	text-transform:uppercase;
+	font-size:10px;
+	letter-spacing:0.3px;
+}
+
 .headerLine span.rgt {
 	position:absolute;
 	right:0;
@@ -88,6 +94,7 @@ h1 {
 	white-space:nowrap;
 }
 
+.headerLine input { margin-right: 10px; }
 
 .headerOptLine {
 	position:relative;
