* Bugfix commit to test on other installation

--- a/core/view/form/FormElement_DatabaseRelation_Record.tmpl
+++ b/core/view/form/FormElement_DatabaseRelation_Record.tmpl
@@ -1,5 +1,5 @@
 
-<div id="foreign-record-{$record.type}-{$key}" class="databaseRelation">
+<div id="foreign-record-{$idRecord}-{$record.type}-{$key}" class="databaseRelation">
 	<div id="foreign-record-{$record.type}-{$key}-trigger" class="formtrigger closed" onclick="Todoyu.Form.toggleSubform(this);">
 		<span class="label" title="{Label form.icon.edit}">{$record._label}</span>
 		<span class="additionalStuff">
