--- a/core/view/form/FormElement_DatabaseRelation.tmpl
+++ b/core/view/form/FormElement_DatabaseRelation.tmpl
@@ -1,12 +1,14 @@
 {extends "core/view/form/FormElement.tmpl"}
 
 {block name="field"}
-	<div class="foreignRecords" id="foreign-records-{$fieldname}">
-		<div class="foreignRecordsActionControll overflow">
-			<a class="icon add addForeignRecord" href="javascript:void(0)" onclick="Todoyu.Form.addSubform('{$formbasename}','{$formname}','{$fieldname}', '{$foreignRecordConf.addSubformConfig.ext}', '{$foreignRecordConf.addSubformConfig.controller}')" title="{Label form.icon.add}"><span class="hidden">{Label form.icon.add}</span></a>
-		</div>
-{foreach $foreignRecords key record}
-		{include "core/view/form/FormElement_DatabaseRelation_Record.tmpl"}
-{/foreach}
+
+<div id="foreign-records-{$idRecord}-{$fieldname}" class="foreignRecords" >
+	<div class="foreignRecordsActionControll overflow">
+		<a onclick="Todoyu.Form.addSubform({$idRecord}, '{$formname}', '{$fieldname}', '{$foreignRecordConf.addSubformConfig.ext}', '{$foreignRecordConf.addSubformConfig.controller}')" class="icon add addForeignRecord" href="javascript:void(0)" title="{Label form.icon.add}"><span class="hidden">{Label form.icon.add}</span></a>
 	</div>
+	{foreach $foreignRecords key record}
+		{include "core/view/form/FormElement_DatabaseRelation_Record.tmpl"}
+	{/foreach}
+</div>
+
 {/block}
