* New scriptacolous version * Added view helpers for xml forms * DatabaseRelation fixes/cleanup

--- a/core/assets/css/form.css
+++ b/core/assets/css/form.css
@@ -132,7 +132,8 @@ div.fElement {
 			width:90px;
 			margin-right:5px;
 		}
-		div.typeTimeinput .fField input {
+		div.typeTimeinput .fField input,
+		div.typeDuration .fField input  {
 			float:left;
 			width:30px;
 		}
