--- a/core/view/form/FormElement_DatabaseRelation.tmpl
+++ b/core/view/form/FormElement_DatabaseRelation.tmpl
@@ -2,9 +2,9 @@
 
 {block name="field"}
 
-<div id="foreign-records-{$idRecord}-{$fieldname}" class="foreignRecords" >
+<div id="foreignrecords-{$idRecord}-{$fieldname}" class="foreignRecords" >
 	<div class="foreignRecordsActionControll overflow">
-		<a onclick="Todoyu.Form.addSubform({$idRecord}, '{$formname}', '{$fieldname}', '{$foreignRecordConf.addSubformConfig.ext}', '{$foreignRecordConf.addSubformConfig.controller}')" class="icon add addForeignRecord" href="javascript:void(0)" title="{Label form.icon.add}"><span class="hidden">{Label form.icon.add}</span></a>
+		<a onclick="Todoyu.Form.addRecord({$idRecord}, '{$formname}', '{$fieldname}', '{$foreignRecordConf.addSubformConfig.ext}', '{$foreignRecordConf.addSubformConfig.controller}')" class="icon add addForeignRecord" href="javascript:void(0)" title="{Label form.icon.add}"><span class="hidden">{Label form.icon.add}</span></a>
 	</div>
 	{foreach $records index record}
 		{include "core/view/form/FormElement_DatabaseRelation_Record.tmpl"}
