--- a/core/view/form/FormElement_DatabaseRelation_Record.tmpl
+++ b/core/view/form/FormElement_DatabaseRelation_Record.tmpl
@@ -1,13 +1,13 @@
 
-<div id="foreign-record-{$idRecord}-{$record.type}-{$key}" class="databaseRelation">
-	<div id="foreign-record-{$idRecord}-{$record.type}-{$key}-trigger" onclick="Todoyu.Form.toggleSubform({$idRecord}, '{$record.type}', '{$key}')" class="formtrigger">
+<div id="foreignrecord-{$idRecord}-{$fieldname}-{$record._index}" class="databaseRelation">
+	<div id="foreignrecord-{$idRecord}-{$fieldname}-{$record._index}-trigger" onclick="Todoyu.Form.toggleRecordForm({$idRecord}, '{$fieldname}', {$record._index})" class="formtrigger">
 		<span class="label" title="{Label form.icon.edit}">{$record._label}</span>
 		<span class="additionalStuff">
-			<a href="javascript:void(0)" id="remove-{$idRecord}-{$record.type}-{$record.index}" class="icon remove removeForeignRecord remove-{$record.type}" onclick="Todoyu.Form.removeSubRecord(this)" title="{Label form.icon.remove}"><span class="hidden">{Label form.icon.remove}</span></a>
+			<a href="javascript:void(0)" id="foreignrecord-{$idRecord}-{$fieldname}-{$record._index}-remove" class="icon remove removeForeignRecord remove-{$fieldname}" onclick="Todoyu.Form.removeRecord({$idRecord}, '{$fieldname}', {$record._index})" title="{Label form.icon.remove}"><span class="hidden">{Label form.icon.remove}</span></a>
 		</span>
 	</div>
-	<div id="foreign-record-{$idRecord}-{$record.type}-{$key}-formhtml" {if $error != true}style="display:none;"{/if}>
-		{$record.formHTML}
+	<div id="foreignrecord-{$idRecord}-{$fieldname}-{$record._index}-formhtml" {if $error != true}style="display:none"{/if}>
+		{$record._formHTML}
 	</div>
 	<div class="clear"><!-- --></div>
 </div>
