--- a/core/view/form/FormElement.tmpl
+++ b/core/view/form/FormElement.tmpl
@@ -1,4 +1,4 @@
-<div id="formElement-{$htmlId}" class="fElement {$containerClass} {$class} {if $odd}odd{else}even{/if} {if $error}error{/if}">
+<div id="formElement-{$htmlId}" class="fElement {$containerClass} {$class} {if $odd}odd{else}even{/if} {if $error}error{/if} {if $wizard.hasWizard}hasWizard{/if}">
 	<div id="formElement-{$htmlId}-labelbox" class="fLabel {if $required}required{/if}">
 		<label for="{$htmlId}" id="{$htmlId}-label">{$label}</label>
 		{if $required}<span class="required">*</span>{/if}
@@ -8,6 +8,7 @@
 			This part should be replaced by your field template
 		{/block}
 		{if $error && $errorMessage}<span class="errorMessage">{$errorMessage}</span>{/if}
-		</div>
+		{if $wizard.hasWizard}<span class="wizardIcon {$wizard.wizardConf.htmlClass}" onclick="Todoyu.Form.openWizard('{$wizard.wizardConf.idRecord}', '{$htmlId}', '{$wizard.wizardConf.ext}', '{$wizard.wizardConf.controller}', '{$wizard.wizardConf.cmd}', '{$wizard.wizardConf.height}', '{$wizard.wizardConf.width}', '{Label $wizard.wizardConf.title true}');"></span>{/if}
+	</div>
 	<div class="fClear"><!-- --></div>
 </div>
