* Added TodoyuRecordManager * Fixed admin locale bug * Comment cleanup start

--- a/core/view/headlet-metamenu.tmpl
+++ b/core/view/headlet-metamenu.tmpl
@@ -3,7 +3,11 @@
 {block "headlet"}
 	<ul id="metamenu" class="metamenu">
 {foreach $entries entry}
-		<li id="metamenu-{$entry.key}"{if $dwoo.foreach.default.first} class="first"{/if}><a href="{$entry.href}" {if $entry.onClick}onclick="{$entry.onClick}"{/if} {if $entry.onMouseOver}onmouseover="{$entry.onMouseOver}"{/if} {if $entry.onMouseOut}onmouseout="{$entry.onMouseOut}"{/if}>{$entry.label}</a></li>
+		<li id="metamenu-{$entry.key}"{if $dwoo.foreach.default.first} class="first"{/if}>
+			<a href="{$entry.href}" {if $entry.onClick}onclick="{$entry.onClick}"{/if} {if $entry.onMouseOver}onmouseover="{$entry.onMouseOver}"{/if} {if $entry.onMouseOut}onmouseout="{$entry.onMouseOut}"{/if}>
+				{Label $entry.label true}
+			</a>
+		</li>
 {/foreach}
 	</ul>
 {/block}
