--- a/core/view/error.html
+++ b/core/view/error.html
@@ -22,6 +22,6 @@
 </style>
 
 <div class="errmsg">
-	<div class="header"><?=$title?></div>
-	<div class="message"><?=$message?></div>
+	<div class="header"><?php echo $title; ?></div>
+	<div class="message"><?php echo $message; ?></div>
 </div>
