* extended submenu items of all extensions to have direct access to area tabs * ensured tab param to be used in all extension's extActionControllers * refined metamenu subitems styling

--- a/core/view/navi.tmpl
+++ b/core/view/navi.tmpl
@@ -10,10 +10,7 @@
 					<a href="{$sub.href}" title="{$sub.desc}"{if $sub.active} class="active"{/if}>{$sub.label}</a>
 				</li>
 		{/foreach}
-				<li class="item last bcl02">
-					<span class="lb"><!-- last --></span>
-					<span class="rb"><!-- last --></span>
-				</li>
+				<li class="item last bcl02"> </li>
 			</ul>
 	{/if}
 		</li>
