--- a/core/assets/css/navi.css
+++ b/core/assets/css/navi.css
@@ -71,8 +71,7 @@ ul#navi-main-list li ul {
 	position: absolute;
 	top: 29px;
 	left: -9999px;
-	width: 180px !important;
-	width: 210px;
+	width: 170px !important;
 	margin-top:1px;
 	margin-left: -30px;
 	padding: 0 30px 30px 30px;
@@ -84,44 +83,30 @@ ul#navi-main-list li ul li {
 	background-image:none;
 	background-color: #d3dabb; /* bcl03 */
 	text-align:left;
-
+	padding-left: 1px;
+	padding-right: 1px;
+	border-left: 1px solid #CDCEC8;
+	border-right: 1px solid #CDCEC8;
 }
 
 ul#navi-main-list li ul li.first {
+		padding-top: 1px;
+		border-top: 1px solid #B9BCAE;
 }
 
 ul#navi-main-list li ul li.last {
-	position: relative;
-	background-color:red;
-}
-
-ul#navi-main-list li ul li.last span.lb,
-ul#navi-main-list li ul li.last span.rb {
-	display:block;
-	position: absolute;
-	top:0;
-	left:0;
-	width:51%;
-	height:13px;
-	background-image:url('../img/col3_bg_r13.png');
-	background-position:0 100%;
-	background-color:transparent;
-}
-
-ul#navi-main-list li ul li.last span.rb {
-	left:auto;
-	right:0;
-	background-position:100% 100%;
+	padding-bottom: 1px;
+	border-bottom: 1px solid #CDCEC8;
 }
 
 ul#navi-main-list li ul li a {
-	padding: 2px 10px;
-	line-height: 16px;
-	font-size:11px;
+	padding: 2px 10px 2px 14px;
+	line-height: 20px;
+	font-size:10px;
 	font-weight:normal;
 	background-image:none;
 }
 
 ul#navi-main-list li ul li a:hover {
-	background-color:#adb989; /* bcl04 */
+	background-color:#EFF3E5; /* bcl04 */
 }
