* fixed calendar weekdaystart to be monday * minor js cleanup in CalendarBody.js

--- a/core/assets/css/contextmenu.css
+++ b/core/assets/css/contextmenu.css
@@ -24,7 +24,7 @@
 
 #contextmenu li a:hover,
 #contextmenu li span:hover {
-	background-color: #EFEFEF;
+	background-color:#E1E5D8;
 }
 
 #contextmenu li ul {
