* Added native onclick attribute for checkbox * Final cleanup and fixes for event edit/add * Changed quickevent dateinput formats * Bugfixes

--- a/core/view/form/FormElement_Checkbox.tmpl
+++ b/core/view/form/FormElement_Checkbox.tmpl
@@ -1,5 +1,5 @@
 {extends "core/view/form/FormElement.tmpl"}
 
 {block name="field"}
-	<input class="{$inputClass} {$class}" type="checkbox" name="{$htmlName}" id="{$htmlId}" value="1" {if $disabled}disabled="disabled"{/if} {$extraAttributes} />
+	<input class="{$inputClass} {$class}" type="checkbox" name="{$htmlName}" id="{$htmlId}" value="1" {if $disabled}disabled="disabled"{/if}{if $onclick}onclick="{$onclick}"{/if} {$extraAttributes} />
 {/block}
