* Renamed cmd to action (core)

--- a/core/view/debug_html.tmpl
+++ b/core/view/debug_html.tmpl
@@ -3,9 +3,7 @@
 	{if $title}
 		<strong style="font-size:14px">Debug: {$title}</strong>
 	{/if}
-	<pre style="font-family:'Courier New', Courier, monospace; margin-top:10px; margin-bottom:0px">
-		{$debug}
-	</pre>
+	<pre style="font-family:'Courier New', Courier, monospace; margin-top:10px; margin-bottom:0px">{$debug}</pre>
 	{if $backtrace}
 	<hr/>
 	<strong style="font-size:14px">Backtrace:</strong><br/>
