--- a/install/view/adminpassword.tmpl
+++ b/install/view/adminpassword.tmpl
@@ -15,6 +15,6 @@
       </tr>
     </table>
 	  <input type="submit" value="Change admin password">
-	  <input type="hidden" name="command" value="setadminpassword">
+	  <input type="hidden" name="action" value="setadminpassword">
 </form>
 {/block}
