--- a/install/view/config.tmpl
+++ b/install/view/config.tmpl
@@ -23,6 +23,6 @@
       </tr>
     </table>
 <input type="submit" value="Save configuration">
-	<input type="hidden" name="command" value="config">
+	<input type="hidden" name="action" value="config">
 </form>
 {/block}
