--- a/install/view/dbconnection.tmpl
+++ b/install/view/dbconnection.tmpl
@@ -23,6 +23,6 @@
       </tr>
     </table>
 <input type="submit" value="Save connection data">
-	<input type="hidden" name="command" value="dbconnection">
+	<input type="hidden" name="action" value="dbconnection">
 </form>
 {/block}
