--- a/install/view/importstatic.tmpl
+++ b/install/view/importstatic.tmpl
@@ -5,6 +5,6 @@
 <p>DB connection is stored, import static data now.</p>
 <form method="post">
 	<input type="submit" value="Import static database data">
-	<input type="hidden" name="command" value="importstatic">
+	<input type="hidden" name="action" value="importstatic">
 </form>
 {/block}
