--- a/install/view/servercheck.tmpl
+++ b/install/view/servercheck.tmpl
@@ -20,7 +20,7 @@
 {if $next}
 <form method="post">
 	<input type="submit" value="Configure database">
-	<input type="hidden" name="command" value="servercheck">
+	<input type="hidden" name="action" value="servercheck">
 </form>
 {/if}
 
