--- a/install/view/welcome.tmpl
+++ b/install/view/welcome.tmpl
@@ -5,6 +5,6 @@
 <p>{$text}</p>
 <form method="post">
 	<input type="submit" value="Check server compatibility">
-	<input type="hidden" name="command" value="start">
+	<input type="hidden" name="action" value="start">
 </form>
 {/block}
