--- a/core/view/navi.tmpl
+++ b/core/view/navi.tmpl
@@ -7,7 +7,7 @@
 			<ul id="navi-main-list-{$entry.key}" class="navilist">
 		{foreach $entry.submenu sub name=navimainsub}
 				<li class="item item{$sub.key}{if $sub.active} active{/if}{if $dwoo.foreach.navimainsub.first} first{/if} bcl02">
-					<a href="{$sub.href}" title="{$sub.desc}"{if $sub.active} class="active"{/if}>{$sub.label}</a>
+					<a href="{$sub.href}" title="{$sub.desc}" class="link{$entry.key}{$sub.type}{if $sub.active} active{/if}">{$sub.label}</a>
 				</li>
 		{/foreach}
 				<li class="item last bcl02"> </li>
