--- a/core/view/form/FormElement.tmpl
+++ b/core/view/form/FormElement.tmpl
@@ -7,7 +7,7 @@
 		{block name="field"}
 			This part should be replaced by your field template
 		{/block}
-		{if $error && $errorMessage}<span class="errorMessage">{$errorMessage}</span>{/if}
+		{if $error && $errorMessage}<span class="errorMessage">{Label $errorMessage}</span>{/if}
 		{if $wizard.hasWizard}<span class="wizardIcon {$wizard.wizardConf.htmlClass}" onclick="Todoyu.Form.openWizard('{$wizard.wizardConf.idRecord}', '{$htmlId}', '{$wizard.wizardConf.ext}', '{$wizard.wizardConf.controller}', '{$wizard.wizardConf.action}', '{$wizard.wizardConf.height}', '{$wizard.wizardConf.width}', '{Label $wizard.wizardConf.title true}');"></span>{/if}
 	</div>
 	<div class="fClear"><!-- --></div>
