--- a/core/view/footer.tmpl
+++ b/core/view/footer.tmpl
@@ -1,4 +1,14 @@
 <div id="footer">
+	<div class="inner">
+		<div id="footer-info">Version: {constant(TODOYU_VERSION)}</div>
+		<div id="footer-logo"><img src="core/assets/img/logo.png" alt="Todoyu" width="85" height="60" /></div>
+		<div id="footer-address">
+			<a href="http://www.todoyu.com/" target="_blank">&copy; <strong>todoyu</strong></a> by <a href="http://www.snowflake.ch/" target="_blank">snowflake productions gmbh</a><br />
+			<a href="mailto:feedback@todoyu.com">feedback@todoyu.com</a><br />
+			<a href="http://www.todoyu.com/" target="_blank">www.todoyu.com</a>
+		</div>
+	</div>
+	{*
 	<div class="line"><hr size="1" /></div>
 	<div class="address">
 		<a href="http://www.todoyu.com/" target="_blank">&copy; <strong>todoyu</strong> by</a>
@@ -7,4 +17,5 @@
 			<span class="logo"><img src="core/assets/img/logo.png" alt="todoyu" width="85" height="60" /></span>
 		</a>
 	</div>
+	*}
 </div>
